--- a/SuperMarket_Client/Areas/Admin/Views/Brand_Category/Brand_CategoryManage.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Brand_Category/Brand_CategoryManage.cshtml
@@ -9,7 +9,7 @@
 {
 	<div class="accordion accordion-flush" id="accordionFlushExample">
 		<div class="accordion-item">
-			<h2 class="accordion-header" id="flush-headingOne">
+			<h2 class="accordion-header pt-1" id="flush-headingOne">
 				<button class="accordion-button collapsed " style="background: linear-gradient(#e66465, #9198e5);" type="button" data-bs-toggle="collapse" data-bs-target="#item_@item.CategoryId" aria-expanded="false" aria-controls="flush-collapseOne">
 					@item.CategoryName
 				</button>
@@ -19,16 +19,25 @@
 				if (item.CategoryId == data.Category.CategoryId)
 				{
 					<div id="item_@item.CategoryId" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-						<div class="accordion-body">@data.Brand.BrandName</div>
-						<button class="btn btn-outline-success" type="button" data-bs-toggle="collapse" data-bs-target="#item_BC_@data.BrandCateId" aria-expanded="false" aria-controls="collapseExample">
-							Product of the Brand
-						</button>
+						<div class="accordion-body" style="position:relative">
+							Brand name: @data.Brand.BrandName |
+							Created date: @data.Brand.CreatedDate |
+							Address: @data.Brand.Address |
+							Origin: @data.Brand.Origin |
+							<a class="btn btn-outline-success" id="deleteBtn" onclick="return deleteBrandBtn(@data.BrandId)">Delete Brand</a>
+							<a class="btn btn-outline-success" href="/Admin/Brand/UpdateBrand/@data.BrandId">Update Brand</a>
+							<button class="btn btn-outline-success" type="button" data-bs-toggle="collapse" data-bs-target="#item_BC_@data.BrandCateId" aria-expanded="false" aria-controls="collapseExample">
+								Show all Product
+							</button>
+
+
+						</div>
 						@foreach (Product product in @ViewBag.product)
 						{
 							if (product.BrandCateId == data.BrandCateId)
 							{
-								<div class="collapse pt-2" id="item_BC_@data.BrandCateId">
-									<div class="card card-body" style="background-color:gray">
+								<div class="collapse pt-1" id="item_BC_@data.BrandCateId">
+									<div class="card card-body" style="background-color:#E8E8E8">
 										@product.ProductName
 									</div>
 								</div>
@@ -40,3 +49,43 @@
 		</div>
 	</div>
 }
+<script>
+	function deleteBrandBtn(data) {
+		Swal.fire({
+			title: 'Are you sure?',
+			text: "You won't be able to revert this!",
+			icon: 'warning',
+			showCancelButton: true,
+			confirmButtonColor: '#3085d6',
+			cancelButtonColor: '#d33',
+			confirmButtonText: 'Yes, delete it!'
+		}).then((result) => {
+			if (result.isConfirmed) {
+				$.ajax({
+					url: '/Admin/Brand/DeleteBrand',
+					type: 'Delete',
+					data: {
+						id: data
+					}, success: function(respond) {
+						if (respond.success) {
+							Swal.fire({
+								icon: 'success',
+								title: respond.msgSuccess,
+								showConfirmButton: false
+							})
+                            location.reload();
+						} else {
+							Swal.fire({
+								icon: 'error',
+								title: 'Oops...',
+								text: respond.msgFail
+							})
+						}
+					}, error: function(response) {
+						alert("error!");  //
+					}
+				})
+			}
+		})
+	}
+</script>
