--- a/SuperMarket_Client/Areas/Admin/Views/Brand_Category/Brand_CategoryManage.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Brand_Category/Brand_CategoryManage.cshtml
@@ -5,6 +5,11 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
+<a class="btn btn-outline-primary" href="/Admin/Product/ProductManage">Product Manage</a> |
+<a class="btn btn-outline-primary" href="/Admin/Product/ProductManage">Create Brand</a> |
+<a class="btn btn-outline-primary" href="/Admin/Product/ProductManage">Create Category</a> |
+<a class="btn btn-outline-primary" href="/Admin/Product/ProductManage">Update Category</a> |
+<a class="btn btn-outline-primary" href="/Admin/Product/ProductManage">Delete Category</a>
 @foreach (Category item in @ViewBag.CategoryList)
 {
 	<div class="accordion accordion-flush" id="accordionFlushExample">
@@ -14,6 +19,7 @@
 					@item.CategoryName
 				</button>
 			</h2>
+
 			@foreach (var data in Model)
 			{
 				if (item.CategoryId == data.Category.CategoryId)
@@ -29,6 +35,7 @@
 							<button class="btn btn-outline-success" type="button" data-bs-toggle="collapse" data-bs-target="#item_BC_@data.BrandCateId" aria-expanded="false" aria-controls="collapseExample">
 								Show all Product
 							</button>
+
 
 
 						</div>
@@ -73,7 +80,7 @@
 								title: respond.msgSuccess,
 								showConfirmButton: false
 							})
-                            location.reload();
+							location.reload();
 						} else {
 							Swal.fire({
 								icon: 'error',
