--- a/SuperMarket_Client/Views/Shared/Components/CartList/CartList.cshtml
+++ b/SuperMarket_Client/Views/Shared/Components/CartList/CartList.cshtml
@@ -1,20 +1,25 @@
 ﻿@model List<SuperMarket_Models.Models.ShoppingCart>
 
-    <a class="cart_btn" href="#"><span class="flaticon-shopping-cart icon"><span id="CartCount" class="badge bgc-thm">@ViewBag.CartCount</span></span> <span class="price">@ViewBag.totalCart.ToString("c")</span></a>
-     <ul class="dropdown_content">
-        @foreach(var item in Model){
-            <li class="list_content">
-                <a href="#">
-                    <img class="float-start" src="~/Asset/images/shop/s1.png" alt="50x50">
-                    <p>@item.Product.Title</p>
-                    <small>@item.Count x @item.Product.Price</small>
-                </a>
-            </li>
-        }
-            <li class="list_content">
-                <h5>Subtotal: <span class="text-thm fw400 float-end">@ViewBag.totalCart.ToString("c")</span></h5>
-                <a  asp-area="Customer" asp-controller="Cart"  asp-action="Index" class="btn btn-thm cart_btns">VIEW CART</a>
-                <a  asp-area="Customer" asp-controller="Cart"  asp-action="CheckOut" class="btn btn-thm2 checkout_btns">CHECKOUT</a>
-            </li>
-    </ul>
+
+
+
+
+<a class="cart_btn" href="#"><span class="flaticon-shopping-cart icon"><span id="CartCount" class="badge bgc-thm">@ViewBag.CartCount</span></span> <span class="price">@ViewBag.totalCart.ToString("c")</span></a>
+<ul class="dropdown_content">
+    @foreach (var item in Model)
+    {
+        <li class="list_content">
+            <a href="#">
+                <img class="float-start" src="~/Asset/images/shop/s1.png" alt="50x50">
+                <p>@item.Product.Title</p>
+                <small>@item.Count x @item.Product.Price</small>
+            </a>
+        </li>
+    }
+    <li class="list_content">
+        <h5>Subtotal: <span class="text-thm fw400 float-end">@ViewBag.totalCart.ToString("c")</span></h5>
+        <a asp-area="Customer" asp-controller="Cart" asp-action="Index" class="btn btn-thm cart_btns">VIEW CART</a>
+        <a asp-area="Customer" asp-controller="Cart" asp-action="CheckOut" class="btn btn-thm2 checkout_btns">CHECKOUT</a>
+    </li>
+</ul>
 
