--- a/SuperMarket_Client/wwwroot/Asset/css/style.css
+++ b/SuperMarket_Client/wwwroot/Asset/css/style.css
@@ -22440,3 +22440,60 @@ input.quantity-num[type="number"]::-webkit-outer-spin-button {
 .popup_onload_modal .footer_mailchimp_form .col-auto{
   border: 1px solid #ebebeb;
 }
+
+/*Rating Start*/
+.rating {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+}
+
+    .rating > input {
+        display: none
+    }
+
+    .rating > label {
+        position: relative;
+        width: 1em;
+        font-size: 30px;
+        font-weight: 300;
+        color: #FFD600;
+        cursor: pointer
+    }
+
+        .rating > label::before {
+            content: "\2605";
+            position: absolute;
+            opacity: 0
+        }
+
+        .rating > label:hover:before,
+        .rating > label:hover ~ label:before {
+            opacity: 1 !important
+        }
+
+    .rating > input:checked ~ label:before {
+        opacity: 1
+    }
+
+    .rating:hover > input:checked ~ label:before {
+        opacity: 0.4
+    }
+
+    /*Ratings*/
+.ratings {
+    margin-right: 10px;
+}
+
+.ratings i {
+    color: #cecece;
+    font-size: 32px;
+}
+
+.rating-color {
+    color: #fbc634 !important;
+}
+
+.small-ratings i {
+    color: #cecece;
+}
