--- a/SuperMarket_Client/Areas/Admin/Views/Product/Index.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Product/Index.cshtml
@@ -44,8 +44,8 @@
 			<th>
 				Price
 			</th>
-@*			<th>
-				Final Price
+			@*			<th>
+			Final Price
 			</th>*@
 			<th>
 
@@ -55,69 +55,79 @@
 </table>
 @section Scripts{
 	<script>
-	var dataTable;
-	$(document).ready(function() {
-		loadDataTable();
-	});
-	function loadDataTable() {
-		dataTable = $("#ProductTable").DataTable({
-			"ajax": {
-				"url": "/Admin/Product/GetAllProduct"
-			},
-			"columns": [
-				{ "data": "productName", "width": "15%" },
-				{ "data": "title", "width": "15%" },
-				{ "data": "description", "width": "15%" },
-				{ "data": "createdDate", "width": "15%" },
-				{ "data": "manufactureDate", "width": "15%" },
-				{ "data": "expiryDate", "width": "15%" },
-				{ "data": "weight", "width": "15%" },
-				{ "data": "brand_Category.category.categoryName", "width": "15%" },
-				{ "data": "brand_Category.brand.brandName", "width": "15%" },
-				{ "data": "price", "width": "15%" },
-				//{ "data": "finalPrice", "width": "15%" },
-				{
-					"data": "productId",
-					"render": function(data) {
-						return `<div class="w-75 btn-group" role="group">
-								
-								</a>
-								<a onClick=Delete('/Admin/Product/DeleteProduct/${data}')  class="btn btn-outline-primary" />Delete
-								</a>
-								<a href="/Admin/Product/ProductDetail?id=${data}"  class="btn btn-outline-primary" />Details
-								</a>
-								</div>`
-					},
-					"width": "15%"
-				}
-			]
+		var dataTable;
+		$(document).ready(function() {
+			loadDataTable();
 		});
-	}
-	function Delete(url) {
-		Swal.fire({
-			title: 'Are you sure?',
-			text: "You won't be able to revert this!",
-			icon: 'warning',
-			showCancelButton: true,
-			confirmButtonColor: '#3085d6',
-			cancelButtonColor: '#d33',
-			confirmButtonText: 'Yes, delete it!'
-		}).then((result) => {
-			if (result.isConfirmed) {
-				$.ajax({
-					url: url,
-					type: 'DELETE',
-					success: function(data) {
-						if (data.success) {
-							dataTable.ajax.reload();
-							toastr.success(data.message);
-						} else {
-							toastr.error(data.message);
-						}
+		function loadDataTable() {
+			dataTable = $("#ProductTable").DataTable({
+				"ajax": {
+					"url": "/Admin/Product/GetAllProduct"
+				},
+				"columns": [
+					{ "data": "productName", "width": "15%" },
+					{ "data": "title", "width": "15%" },
+					{ "data": "description", "width": "15%" },
+					{ "data": "createdDate", "width": "15%" },
+					{ "data": "manufactureDate", "width": "15%" },
+					{ "data": "expiryDate", "width": "15%" },
+					{ "data": "weight", "width": "15%" },
+					{ "data": "brand_Category.category.categoryName", "width": "15%" },
+					{ "data": "brand_Category.brand.brandName", "width": "15%" },
+					{ "data": "price", "width": "15%" },
+					//{ "data": "finalPrice", "width": "15%" },
+					{
+						"data": "productId",
+						"render": function(data) {
+							return `<div class="w-75 btn-group" role="group">
+
+												</a>
+												<a onClick=Delete('/Admin/Product/DeleteProduct/${data}')  class="btn btn-outline-primary" />Delete
+												</a>
+												<a href="/Admin/Product/ProductDetail?id=${data}"  class="btn btn-outline-primary" />Details
+												</a>
+												</div>`
+						},
+						"width": "15%"
 					}
-				});
-			}
-		})
-	}
-</script>
+				]
+			});
+		}
+		function Delete(url) {
+			Swal.fire({
+				title: 'Are you sure?',
+				text: "You won't be able to revert this!",
+				icon: 'warning',
+				showCancelButton: true,
+				confirmButtonColor: '#3085d6',
+				cancelButtonColor: '#d33',
+				confirmButtonText: 'Yes, delete it!'
+			}).then((result) => {
+				if (result.isConfirmed) {
+					$.ajax({
+						url: url,
+						type: 'DELETE',
+						success: function(data) {
+							if (data.success) {
+								dataTable.ajax.reload();
+								Swal.fire({
+									position: 'top-end',
+									icon: 'success',
+									title: 'Product has been deleted',
+									showConfirmButton: false,
+									timer: 1500
+								})
+							} else {
+								Swal.fire({
+									icon: 'error',
+									title: 'Oops...',
+									text: 'Something went wrong!',
+								})
+							}
+						}
+					});
+				}
+			})
+		}
+	</script>
 }
