--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -114,7 +114,7 @@
       <div class="row">
         <div class="col-lg-2 col-xl-3">
           <div class="header_top_logo_home1">
-            <img src="~/Asset/images/header-middle-logo.svg" alt="header-middle-logo.svg">
+            <img src="~/Asset/images/logoSuperMarket.png" alt="logoSuperMarket.png">
           </div>
         </div>
         <div class="col-lg-7 col-xl-7">
@@ -716,7 +716,7 @@
       <div class="row mt100">
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3">
           <div class="footer_about_widget">
-            <div class="logo mb40"><img src="~/Asset/images/footer-logo.svg" alt="footer-logo.svg"></div>
+            <div class="logo mb40"><img src="~/Asset/images/logoSuperMarket.png" alt="logoSuperMarket.png"></div>
             <p>Collins Street West, Victoria <br> 8007, Australia.</p>
             <a href="#" class="shop_map_btn">SHOW ON MAP</a>
           </div>
