--- a/SuperMarket_Client/Areas/Admin/Views/Product/Index.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Product/Index.cshtml
@@ -121,7 +121,7 @@
 								Swal.fire({
 									icon: 'error',
 									title: 'Oops...',
-									text: 'Something went wrong!',
+									text: 'Check out if stock still available, you can not delete product.',
 								})
 							}
 						}
