Update Order Customer Page

--- a/SuperMarket_Client/Areas/Customer/Views/Customer/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Customer/Index.cshtml
@@ -10,11 +10,9 @@
 						<div class="ed_menu_list">
 							<ul>
 								<li><a href="page-dashboard.html">Dashboard</a></li>
-								<li><a href="page-dashboard-order.html">Orders</a></li>
-								<li><a href="page-dashboard-wish-list.html">Downloads</a></li>
+								<li><a asp-action="Order" asp-controller="Customer" asp-area="Customer">Orders</a></li>
 								<li><a href="page-dashboard-address.html">Addresses</a></li>
 								<li><a class="active" href="page-dashboard-account-details.html">Account Details</a></li>
-								<li><a href="page-dashboard-wish-list.html">Wishlist</a></li>
 								<li><a href="page-login.html">Logout</a></li>
 							</ul>
 						</div>
