--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
 
 <link rel="stylesheet" href="~/Asset/css/dashbord_navitaion.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+@*DataTable*@
+    <link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
+
 <!-- Responsive stylesheet -->
     <link rel="stylesheet" href="~/Asset/css/responsive.css">
 <!-- Title -->
@@ -831,6 +834,8 @@
 <script src="~/Asset/js/script.js"></script>
 @*<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>*@
 <script src="https://cdn.tiny.cloud/1/t0cc6iw0zgyf2cce0nwq9yqftiwgrw6obfqmb1b45t650dfj/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
+<script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 
